--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "tailwind build -i src/style.css -o public/tailwind.css -w"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
